[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Jeopardy.tres" type="Theme" id=2]
[ext_resource path="res://scenes/QuestionManager.gd" type="Script" id=3]
[ext_resource path="res://assets/font/gyparody hv.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/TitleScreen.gd" type="Script" id=5]
[ext_resource path="res://assets/font/Swiss 911 Compressed Regular/Swiss 911 Compressed Regular.otf" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/QuestionScreen.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 6 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 1, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
margin_left = 287.0
margin_top = 75.0
margin_right = 737.0
margin_bottom = 525.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 5

[node name="CatContainer1" type="VBoxContainer" parent="CenterContainer/GridContainer"]
margin_right = 90.0
margin_bottom = 450.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Category" type="Label" parent="CenterContainer/GridContainer/CatContainer1"]
margin_right = 90.0
margin_bottom = 75.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "Vocabulary"
align = 1
valign = 1

[node name="100" type="Button" parent="CenterContainer/GridContainer/CatContainer1"]
margin_top = 75.0
margin_right = 90.0
margin_bottom = 150.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "$100"

[node name="200" type="Button" parent="CenterContainer/GridContainer/CatContainer1"]
margin_top = 150.0
margin_right = 90.0
margin_bottom = 225.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "$200"

[node name="300" type="Button" parent="CenterContainer/GridContainer/CatContainer1"]
margin_top = 225.0
margin_right = 90.0
margin_bottom = 300.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "$300"

[node name="400" type="Button" parent="CenterContainer/GridContainer/CatContainer1"]
margin_top = 300.0
margin_right = 90.0
margin_bottom = 375.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "$400"

[node name="500" type="Button" parent="CenterContainer/GridContainer/CatContainer1"]
margin_top = 375.0
margin_right = 90.0
margin_bottom = 450.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "$500"

[node name="CatContainer2" type="VBoxContainer" parent="CenterContainer/GridContainer"]
margin_left = 90.0
margin_right = 180.0
margin_bottom = 450.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Category" type="Label" parent="CenterContainer/GridContainer/CatContainer2"]
margin_right = 90.0
margin_bottom = 75.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "Sentences"
align = 1
valign = 1

[node name="100" type="Button" parent="CenterContainer/GridContainer/CatContainer2"]
margin_top = 75.0
margin_right = 90.0
margin_bottom = 150.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "$100"

[node name="200" type="Button" parent="CenterContainer/GridContainer/CatContainer2"]
margin_top = 150.0
margin_right = 90.0
margin_bottom = 225.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "$200"

[node name="300" type="Button" parent="CenterContainer/GridContainer/CatContainer2"]
margin_top = 225.0
margin_right = 90.0
margin_bottom = 300.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "$300"

[node name="400" type="Button" parent="CenterContainer/GridContainer/CatContainer2"]
margin_top = 300.0
margin_right = 90.0
margin_bottom = 375.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "$400"

[node name="500" type="Button" parent="CenterContainer/GridContainer/CatContainer2"]
margin_top = 375.0
margin_right = 90.0
margin_bottom = 450.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "$500"

[node name="CatContainer3" type="VBoxContainer" parent="CenterContainer/GridContainer"]
margin_left = 180.0
margin_right = 270.0
margin_bottom = 450.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Category" type="Label" parent="CenterContainer/GridContainer/CatContainer3"]
margin_right = 90.0
margin_bottom = 75.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "Grammar"
align = 1
valign = 1

[node name="100" type="Button" parent="CenterContainer/GridContainer/CatContainer3"]
margin_top = 75.0
margin_right = 90.0
margin_bottom = 150.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "$100"

[node name="200" type="Button" parent="CenterContainer/GridContainer/CatContainer3"]
margin_top = 150.0
margin_right = 90.0
margin_bottom = 225.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "$200"

[node name="300" type="Button" parent="CenterContainer/GridContainer/CatContainer3"]
margin_top = 225.0
margin_right = 90.0
margin_bottom = 300.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "$300"

[node name="400" type="Button" parent="CenterContainer/GridContainer/CatContainer3"]
margin_top = 300.0
margin_right = 90.0
margin_bottom = 375.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "$400"

[node name="500" type="Button" parent="CenterContainer/GridContainer/CatContainer3"]
margin_top = 375.0
margin_right = 90.0
margin_bottom = 450.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "$500"

[node name="CatContainer4" type="VBoxContainer" parent="CenterContainer/GridContainer"]
margin_left = 270.0
margin_right = 360.0
margin_bottom = 450.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Category" type="Label" parent="CenterContainer/GridContainer/CatContainer4"]
margin_right = 90.0
margin_bottom = 75.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "Story
Questions"
align = 1
valign = 1

[node name="100" type="Button" parent="CenterContainer/GridContainer/CatContainer4"]
margin_top = 75.0
margin_right = 90.0
margin_bottom = 150.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "$100"

[node name="200" type="Button" parent="CenterContainer/GridContainer/CatContainer4"]
margin_top = 150.0
margin_right = 90.0
margin_bottom = 225.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "$200"

[node name="300" type="Button" parent="CenterContainer/GridContainer/CatContainer4"]
margin_top = 225.0
margin_right = 90.0
margin_bottom = 300.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "$300"

[node name="400" type="Button" parent="CenterContainer/GridContainer/CatContainer4"]
margin_top = 300.0
margin_right = 90.0
margin_bottom = 375.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "$400"

[node name="500" type="Button" parent="CenterContainer/GridContainer/CatContainer4"]
margin_top = 375.0
margin_right = 90.0
margin_bottom = 450.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "$500"

[node name="CatContainer5" type="VBoxContainer" parent="CenterContainer/GridContainer"]
margin_left = 360.0
margin_right = 450.0
margin_bottom = 450.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Category" type="Label" parent="CenterContainer/GridContainer/CatContainer5"]
margin_right = 90.0
margin_bottom = 75.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "Speaking"
align = 1
valign = 1

[node name="100" type="Button" parent="CenterContainer/GridContainer/CatContainer5"]
margin_top = 75.0
margin_right = 90.0
margin_bottom = 150.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "$100"

[node name="200" type="Button" parent="CenterContainer/GridContainer/CatContainer5"]
margin_top = 150.0
margin_right = 90.0
margin_bottom = 225.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "$200"

[node name="300" type="Button" parent="CenterContainer/GridContainer/CatContainer5"]
margin_top = 225.0
margin_right = 90.0
margin_bottom = 300.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "$300"

[node name="400" type="Button" parent="CenterContainer/GridContainer/CatContainer5"]
margin_top = 300.0
margin_right = 90.0
margin_bottom = 375.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "$400"

[node name="500" type="Button" parent="CenterContainer/GridContainer/CatContainer5"]
margin_top = 375.0
margin_right = 90.0
margin_bottom = 450.0
rect_min_size = Vector2( 90, 75 )
size_flags_vertical = 6
theme = ExtResource( 2 )
text = "$500"

[node name="QuestionManager" type="Node" parent="."]
script = ExtResource( 3 )

[node name="TitleScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="TitleScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 1, 1 )

[node name="Label" type="Label" parent="TitleScreen"]
margin_right = 1023.0
margin_bottom = 598.0
custom_fonts/font = SubResource( 1 )
text = "Jeopardy
"
align = 1
valign = 1

[node name="BookName" type="OptionButton" parent="TitleScreen"]
margin_left = 321.0
margin_top = 447.0
margin_right = 350.0
margin_bottom = 467.0
text = "Book"

[node name="Chapter" type="OptionButton" parent="TitleScreen"]
margin_left = 606.0
margin_top = 446.0
margin_right = 635.0
margin_bottom = 466.0
text = "Chapter"

[node name="CreateGameButton" type="Button" parent="TitleScreen"]
margin_right = 12.0
margin_bottom = 20.0

[node name="QuestionScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="QuestionScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 1, 1 )

[node name="Button" type="Button" parent="QuestionScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 896.0
margin_top = 534.0
margin_right = -32.0
margin_bottom = -32.0
text = "Show Answer"

[node name="CenterContainer" type="CenterContainer" parent="QuestionScreen"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Question" type="Label" parent="QuestionScreen/CenterContainer"]
margin_left = 112.0
margin_top = 222.0
margin_right = 912.0
margin_bottom = 377.0
rect_min_size = Vector2( 800, 0 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.862745, 0.796078, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Here is the question for the students"
align = 1
autowrap = true

[connection signal="pressed" from="TitleScreen/CreateGameButton" to="TitleScreen" method="_on_CreateGameButton_pressed"]
